projects section / some animations

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -50,7 +50,7 @@
   animation-name: socialIconAnimation;
   animation-duration: 500ms;
   animation-fill-mode: forwards;
-  opacity: 0; 
+  opacity: 0;
 }
 .social-icon:hover {
   color: #00d8ff;
@@ -64,7 +64,7 @@
     -moz-transform: translate(0px, 130px);
     -ms-transform: translate(0px, 130px);
     -o-transform: translate(0px, 130px);
-}
+  }
   65% {
     color: #00d8ff;
   }
@@ -75,7 +75,7 @@
     -ms-transform: translate(0px, -80px);
     -o-transform: translate(0px, -80px);
     opacity: 1;
-}
+  }
 }
 .social-icon-1 {
   animation-delay: 200ms;
@@ -126,10 +126,44 @@
     color: white;
     text-decoration: none;
     justify-content: center;
-    display: flex;
-    text-decoration: line-through;
     font-size: 25px;
+    width: fit-content;
+    position: relative;
   }
+
+  .nav-item:hover {
+    animation-name: none; 
+  }
+  .nav-item:hover {
+    cursor: default;
+  }
+  .nav-item::after {
+    content: "";
+    position: absolute;
+    bottom: 45%;
+    height: 4px;
+    width: 100%;
+    left: 0;
+    background-color: white;
+    transform: scaleX(0);
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+  }
+  .nav-item:hover::after {
+    transform: scaleX(1);
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+  }
+
   .navbar-nav {
     padding-top: 50%;
     height: 94vh;
